[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/drillcar1.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Drill.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/debris.png" type="Texture" id=3]
[ext_resource path="res://scripts/player/pause_screen.gd" type="Script" id=4]
[ext_resource path="res://assets/music/preview_music.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/fonts/m5x7.fnt" type="BitmapFont" id=6]
[ext_resource path="res://scripts/world/loading_screen.gd" type="Script" id=7]
[ext_resource path="res://scripts/player/health_and_fuel.gd" type="Script" id=9]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=10]
[ext_resource path="res://scripts/player/sprites.gd" type="Script" id=11]
[ext_resource path="res://scripts/player/inventory_screen.gd" type="Script" id=12]
[ext_resource path="res://scripts/player/camera.gd" type="Script" id=13]
[ext_resource path="res://scripts/player/ui_disappear.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
z_index = 2
collision_mask = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sprites" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="DrillCar" type="Sprite" parent="Sprites"]
z_index = 1
texture = ExtResource( 1 )

[node name="DrillH" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 25, 0 )

[node name="DrillV" parent="Sprites" instance=ExtResource( 2 )]
position = Vector2( 0, 25 )
rotation = 1.5708

[node name="DirtParticles" type="CPUParticles2D" parent="."]
position = Vector2( 28, 0 )
z_index = 1
emitting = false
amount = 128
lifetime = 3.0
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 300 )
initial_velocity = 100.0
initial_velocity_random = 0.6
angular_velocity = 200.0
angular_velocity_random = 1.0
angle = 360.0
angle_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pause" type="Node2D" parent="UI"]
pause_mode = 2
z_index = 10
script = ExtResource( 4 )

[node name="PreviewMusic" type="AudioStreamPlayer" parent="UI/Pause"]
stream = ExtResource( 5 )
bus = "Music"

[node name="Warning" type="Label" parent="UI/Pause"]
margin_left = 8.0
margin_top = 48.0
margin_right = 312.0
margin_bottom = 112.0
rect_min_size = Vector2( 304, 64 )
custom_fonts/font = ExtResource( 6 )
text = "Are you sure you wish to quit to main menu?  Any un-saved progress will be lost."
align = 1
valign = 1
autowrap = true

[node name="Loading" type="Node2D" parent="UI"]
z_index = 10
script = ExtResource( 7 )

[node name="Inventory" type="Node2D" parent="UI"]
pause_mode = 2
z_index = 10
script = ExtResource( 12 )

[node name="Title" type="Label" parent="UI/Inventory"]
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 6 )
text = "Inventory"
align = 1
valign = 1

[node name="Depth" type="Label" parent="UI"]
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 6 )
text = "0 ft"
align = 1
valign = 1

[node name="Money" type="Label" parent="UI"]
margin_left = -3.0
margin_right = 317.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 6 )
text = "$0"
align = 2
valign = 1

[node name="MoneyIncrement" type="Label" parent="UI"]
margin_left = -3.0
margin_top = 10.0
margin_right = 317.0
margin_bottom = 24.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 6 )
text = "$0"
align = 2
valign = 1
script = ExtResource( 14 )

[node name="HealthAndFuel" type="Node2D" parent="UI"]
script = ExtResource( 9 )

[node name="FuelStatus" type="Label" parent="UI"]
margin_left = 10.0
margin_top = 20.0
margin_right = 330.0
margin_bottom = 34.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 6 )
valign = 1

[node name="Status" type="Label" parent="."]
margin_left = -160.0
margin_top = -31.0
margin_right = 160.0
margin_bottom = -17.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 6 )
align = 1
script = ExtResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( -160, -120 )
anchor_mode = 0
current = true
limit_left = 160
limit_right = 1088
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 13 )

[node name="FuelTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
